--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4535,8 +4535,6 @@
     <!-- In WiFi AP notification -->
     <string name="notify_turn_wifi_ap_off_title">Turn Wi-Fi AP off</string>
 
-    <!-- Longer version of toast bar message when hiding the transient navigation bar (if room) -->
-    <string name="transient_navigation_confirmation_long">Swipe from edge of screen to reveal system bar</string>
-    <add-resource type="bool" name="config_hotswapCapable"></add-resource>
+    <string name="permission">Permission</string>
 
 </resources>
